Fix vertical alignment of button #2

--- a/styles/botcheck.css
+++ b/styles/botcheck.css
@@ -45,6 +45,9 @@
   background: #FFD6D7;
   user-select: none;
   cursor: pointer;
+  margin-top: 0;
+  margin-left: 0;
+  height: 24px;
 }
 .botcheck.button .icon {
   position: relative;
@@ -60,11 +63,6 @@
   vertical-align: middle;
   margin-top: 3px;
   font-size: 12px;
-}
-.botcheck.button.pull-up {
-  margin-top: 0;
-  margin-left: 0;
-  height: 24px;
 }
 .botcheck.inline {
   display: inline-block;
